--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ul.task-list li input[type="checkbox"] {
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <h1 class="title">Simulation Challenge</h1>
-<p class="subtitle lead">Starter Template with To-Dos</p>
+<p class="subtitle lead">Investment Simulation Analysis</p>
 </div>
 
 
@@ -65,41 +65,8 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="simulation-challenge---starter-template" class="level1">
-<h1>🎲 Simulation Challenge - Starter Template</h1>
-<div class="callout callout-style-default callout-important callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-<span class="screen-reader-only">Important</span>📋 What You Need To Do
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<ul class="task-list">
-<li><label><input type="checkbox">Fork and create repo <code>simulationChallenge</code> in your GitHub</label></li>
-<li><label><input type="checkbox">Clone locally and open in Cursor</label></li>
-<li><label><input type="checkbox">Write your analysis in this <code>index.qmd</code></label></li>
-<li><label><input type="checkbox">Render to HTML (<code>quarto render</code> or Render button)</label></li>
-<li><label><input type="checkbox">Push HTML to your repo and enable GitHub Pages</label></li>
-<li><label><input type="checkbox">Share your site: <code>https://[your-username].github.io/simulationChallenge/</code></label></li>
-</ul>
-</div>
-</div>
-<div class="callout callout-style-default callout-warning callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-<span class="screen-reader-only">Warning</span>⚠️ AI Partnership Required
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>Use Cursor AI for speed, but ensure you understand and can explain the results in your own words. Verify cursor’s calculations as investment simulation is tricky.</p>
-</div>
-</div>
+<section id="simulation-challenge" class="level1">
+<h1>🎲 Simulation Challenge</h1>
 <section id="the-investment-game-brief" class="level2">
 <h2 class="anchored" data-anchor-id="the-investment-game-brief">The Investment Game (Brief)</h2>
 <p>You have the opportunity to buy-in to this game next week with $30,000. Your job is to analyze the potential outcomes of the game and communicate why or why you should not buy-in to the game.</p>
@@ -130,34 +97,25 @@ Figure&nbsp;1: Generative DAG model for the investment game showing how wealth e
 </section>
 <section id="analysis-tasks-fill-these-in" class="level2">
 <h2 class="anchored" data-anchor-id="analysis-tasks-fill-these-in">Analysis Tasks (Fill These In)</h2>
-<div class="callout callout-style-default callout-note callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-<span class="screen-reader-only">Note</span>Grading Scope
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<ul>
-<li>Sections 1–4: required and can earn up to 90% of the grade.</li>
-<li>Sections 5–6: optional; strong, well-supported work here can bring your score up to 100%.</li>
-</ul>
-</div>
-</div>
 <section id="expected-value-after-1-flip" class="level3">
 <h3 class="anchored" data-anchor-id="expected-value-after-1-flip">1) Expected Value After 1 Flip</h3>
 <p>What is the gain in expected value as a percentage of your buy-in? Does this simple analysis suggest you should buy-in to the game?</p>
+<p>Expected Value Calculation: 0.5 * 1.5 * 30000 + 0.5 * 0.6 * 30000 = $31,500.00</p>
 <div id="q1-expected-value-py" class="cell" data-execution_count="3">
 <div class="cell-output cell-output-stdout">
-<pre><code>Expected value after one flip: $31,500.00
+<pre><code>Initial balance: $30,000.00
+Heads outcome: $45,000.00
+Tails outcome: $18,000.00
+Expected value after one flip: $31,500.00
 Gain in expected value: $1,500.00 (5.00%)
 
-The expected value of your account balance after one flip is $31,500.00.
-This is less than $30,000, so you should not buy-in to the game based on expected value alone.</code></pre>
+The expected value of your account balance after one flip is $31,500.00.</code></pre>
 </div>
 </div>
+<section id="expected-value-analysis" class="level4">
+<h4 class="anchored" data-anchor-id="expected-value-analysis">Expected Value Analysis</h4>
+<p>This is an outcome for a single flip, not for the entire game. Here on each flip 50% gain and 40% loss, we can predict final outcome as profitable or not based on probability so you should not buy-in to the game based on expected value alone.</p>
+</section>
 </section>
 <section id="single-simulation-over-time-narrative-plot" class="level3">
 <h3 class="anchored" data-anchor-id="single-simulation-over-time-narrative-plot">2) Single Simulation Over Time (Narrative + Plot)</h3>
@@ -169,13 +127,13 @@ Final balance after 35 coin flips: $293,153.58
 Change: $263,153.58 (877.18%)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>/var/folders/_m/fd3rypln675c08nyp691yvb00000gn/T/ipykernel_17591/207306678.py:99: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.
+<pre><code>/var/folders/_m/fd3rypln675c08nyp691yvb00000gn/T/ipykernel_21568/207306678.py:99: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.
   legend = ax.legend(loc='upper left', framealpha=0.95, fontsize=10.5,</code></pre>
 </div>
 <div class="cell-output cell-output-display">
 <div id="q2-single-sim-py" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="index_files/figure-html/q2-single-sim-py-output-3.png" width="753" height="467" class="figure-img"></p>
+<p><img src="index_files/figure-html/q2-single-sim-py-output-3.png" width="755" height="470" class="figure-img"></p>
 <figcaption>Single simulation path of account balance</figcaption>
 </figure>
 </div>
@@ -395,10 +353,8 @@ This means that in 27 out of 100 simulations, you would be profitable.</code></p
 </section>
 <section id="briefly-explain-your-findings-from-the-previous-step-in-light-of-a-concept-known-as-the-kelly-criterion" class="level3">
 <h3 class="anchored" data-anchor-id="briefly-explain-your-findings-from-the-previous-step-in-light-of-a-concept-known-as-the-kelly-criterion">6) Briefly Explain Your Findings From The Previous Step in Light of A Concept Known as the “Kelly Criterion”</h3>
-<section id="kelly-criterion-summary" class="level4">
-<h4 class="anchored" data-anchor-id="kelly-criterion-summary">Kelly Criterion Summary</h4>
 <div id="q6-kelly-criterion" class="cell" data-execution_count="10">
-<p><strong>Kelly Criterion Diagnostics</strong></p>
+<p><strong>Kelly Criterion Summary</strong></p>
 <ul>
 <li>Kelly-optimal fraction to stake each flip: 25.0%</li>
 <li>Expected log-growth at the Kelly fraction: 0.0062 per flip</li>
@@ -407,7 +363,6 @@ This means that in 27 out of 100 simulations, you would be profitable.</code></p
 </ul>
 </div>
 <p>The Kelly Criterion is a bankroll-management rule that maximizes long-run wealth by choosing the bet fraction that maximizes expected log returns. In this coin-flip game, the optimal Kelly fraction is about 25.0%, so a Kelly bettor would stake roughly one-third of their bankroll each flip. Risking the entire balance (the original strategy) pushes the log-growth rate negative (-0.0527 per flip), which matches the histogram evidence of many wipeouts. Halving the stake to 50% raises the log-growth rate to 0.0000 per flip, moving closer to the Kelly-optimal path while still allowing meaningful upside. Practitioners often bet below the strict Kelly level to guard against streaks and model error; the modified strategy mirrors that prudence by always sheltering half of the account.</p>
-</section>
 </section>
 </section>
 </section>
