added all files

--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@ Figure&nbsp;1: Generative DAG model for the investment game showing how wealth e
 Heads outcome: $45,000.00
 Tails outcome: $18,000.00
 Expected value after one flip: $31,500.00
-Gain in expected value: $1,500.00 (5.00%)
-
-The expected value of your account balance after one flip is $31,500.00.</code></pre>
+Gain in expected value: $1,500.00 (5.00%)</code></pre>
 </div>
 </div>
 <section id="expected-value-analysis" class="level4">
@@ -127,7 +125,7 @@ Final balance after 35 coin flips: $293,153.58
 Change: $263,153.58 (877.18%)</code></pre>
 </div>
 <div class="cell-output cell-output-stderr">
-<pre><code>/var/folders/_m/fd3rypln675c08nyp691yvb00000gn/T/ipykernel_21568/207306678.py:99: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.
+<pre><code>/var/folders/_m/fd3rypln675c08nyp691yvb00000gn/T/ipykernel_22400/207306678.py:99: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.
   legend = ax.legend(loc='upper left', framealpha=0.95, fontsize=10.5,</code></pre>
 </div>
 <div class="cell-output cell-output-display">
@@ -140,7 +138,12 @@ Change: $263,153.58 (877.18%)</code></pre>
 </div>
 </div>
 <p>Starting with $30,000.00, the simulation ran through 35 coin flips. Out of 35 flips, 22 resulted in gains (heads: +50%) and 13 resulted in losses (tails: -40%).</p>
-<p><strong>Key Moments:</strong> - Maximum balance: $307,546.88 reached at coin flip 8 - Minimum balance: $30,000.00 reached at coin flip 0 - Final balance: $293,153.58 after 35 coin flips</p>
+<p><strong>Key Moments:</strong></p>
+<ul>
+<li>Maximum balance: $307,546.88 reached at coin flip 8</li>
+<li>Minimum balance: $30,000.00 reached at coin flip 0</li>
+<li>Final balance: $293,153.58 after 35 coin flips</li>
+</ul>
 <p><strong>✅ OUTCOME ASSESSMENT: I am HAPPY with this outcome. Its not profitable all time and its risky investment </strong></p>
 <p>The investment grew from $30,000.00 to $293,153.58, representing a 877.18% return. This is a 877.18% profit on the initial investment. Despite the volatility shown in the graph (with gains and losses throughout), the final result shows a positive return, which meets the basic goal of earning more than what was initially invested.</p>
 <p>The simulation demonstrates the high volatility inherent in this investment game, with balance fluctuating dramatically between coin flips. The color-coded line shows alternating periods of gains (green) and losses (red), illustrating the risky nature of this strategy.</p>
